[package]
name = "sdf-hydrogen-remover"
description = "SDF Hydrogen remover"
version = "0.1.0"
edition = "2018"
authors = ["Ramon Adàlia"]
readme = "README.md"
repository = "https://github.com/adaliaramon/sdf-hydrogen-remover"
license = "GPL-3,0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
